[package]
name = "bevy-drawer"
version = "0.0.0"
edition = "2024"
description = "In-canvas diagnostic drawer — ErrorLog → overlay, toggled by Intent::DrawerToggle."
license = "MIT"

[lints]
workspace = true

[dependencies]
bevy-observability = { path = "../bevy-observability" }
bevy-input-capture = { path = "../bevy-input-capture" }
bevy_app = { version = "=0.19.0", default-features = false }
bevy_ecs = { version = "=0.19.0", default-features = false }
bevy = { version = "=0.19.0", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "default_font",
    "std",
] }
